Remove copies of Valve textures.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ Icon
 *.lin
 *.filelist.txt
 *.blend1
+
+# Don't commit textures/, these are just copies of P2 VTFs as PNG so blender can read them.
+textures/
