Make render icons addon generate node groups
noderef.blend no longer required
No external files required to run script

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ decompiled*/
 
 // Don't commit Blender's backups.
 *.blend1
+
+// Don't commit VSCode Blender Python Autocomplete
+blender-2.93-autocomplete/
